# cpp_matrix

./: CMakeLists.txt  Makefile  README.md  README_RUS.md
prj.lab/: CMakeLists.txt  s21_matrix_oop.cc  s21_matrix_oop.h
prj.test/: CMakeLists.txt  main_tests.cc  test_determinant.cc  test_inverse_matrix.cc  test_matrix_calc_comp.cc  test_matrix_create.cc  test_matrix_eq.cc  test_matrix_sub.cc  test_matrix_sum.cc  test_matrix_transpose.cc  test_mul_matrix.cc  test_mul_number.cc  test_mutators.cc  tests.h  utility_functions.cc  utility_functions.h
